# Haniel

./: .gitignore  README.md  haniel-runner.ps1  haniel.yaml  haniel.yaml.example  install-haniel.ps1  pyproject.toml  seosoyoung.haniel.yaml
.github/workflows/: test.yml
dashboard/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: ChatInput.tsx  ChatPanel.tsx  ChatView.tsx  DependencyGraph.tsx  HanielSelfCard.tsx  (+9 more)
docs/: configuration.md  haniel-spec.md  specifications.md
docs/adr/: 0001-winsw-over-nssm.md  0002-self-update-architecture.md  0003-directory-structure.md
examples/: minimal-example.yaml
orch-server/: pyproject.toml
orch-server/dashboard/: package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
orch-server/dashboard/src/: App.tsx  index.css
orch-server/dashboard/src/components/layout/: MobileNav.tsx  Sidebar.tsx  Topbar.tsx
orch-server/dashboard/src/components/shared/: Icon.tsx  RejectModal.tsx  StatusPill.tsx  Toaster.tsx
orch-server/dashboard/src/hooks/: useInFlightCommands.test.ts  useInFlightCommands.ts  useIsMobile.test.ts  useIsMobile.ts  useWebSocket.test.ts  useWebSocket.ts
orch-server/dashboard/src/lib/: api.test.ts  api.ts  utils.test.ts  utils.ts
orch-server/dashboard/src/types/: index.ts
orch-server/dashboard/src/views/: HistoryView.tsx  NodesView.tsx  PendingView.tsx
orch-server/src/haniel_orch/: __init__.py  api.py  auth.py  event_store.py  hub.py  node_registry.py  protocol.py  push.py  server.py
orch-server/tests/: conftest.py  test_api.py  test_auth.py  test_event_store.py  test_hub.py  test_node_registry.py  test_protocol.py  test_push.py  test_service_command.py
relay/: package.json  tsconfig.json  wrangler.toml
relay/src/: index.ts
relay/tests/: index.test.ts
src/haniel/: __init__.py  __main__.py  cli.py  config.py  git.py  logs.py  mcp_server.py  process.py  runner.py  validators.py  webhook.py
tests/: __init__.py  conftest.py  test_app_home.py  test_chat_phase2.py  test_chat_phase3.py  test_claude_session.py  test_cli.py  test_config.py  test_config_api.py  test_dashboard.py  test_git.py  test_installer.py  test_logs.py  test_mcp_server.py  test_orch_pending_deploy.py  test_orchestrator_client.py  test_platform_windows.py  test_process.py  test_runner.py  test_runner_orch_deploy.py  test_self_update.py  test_self_update_marker.py  test_slack_bot.py  test_validators.py  test_webhook.py
tests/fixtures/: __init__.py  dummy_server.py  invalid_circular.yaml  invalid_missing_after.yaml  invalid_missing_repo.yaml  invalid_path_duplicate.yaml  invalid_port_conflict.yaml  valid_config.yaml
workspace/: CLAUDE.md
(+46 files in other folders)
